-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8231829 | 11.0.6-oracle | Harold Seigel | P4 | Resolved | Fixed | b01 |
| JDK-8217158 | 11.0.3 | Thomas Stuefe | P4 | Resolved | Fixed | master |
8191101 "Show register content in hs-err file on assert" added a mechanism to show registers when an assert happens, using a one-shot poison page mechanism.
This poison page is established using os::reserve_memory and friends. However, this happens at a point where os:: subsystem initialization did not run completely through. This causes errors for features used by the os:: subsystem which did not have a chance to be initialized yet, eg the NUMA aware allocation.
This poison page is established using os::reserve_memory and friends. However, this happens at a point where os:: subsystem initialization did not run completely through. This causes errors for features used by the os:: subsystem which did not have a chance to be initialized yet, eg the NUMA aware allocation.
- backported by
-
JDK-8217158 Assertion poison page established too early
-
- Resolved
-
-
JDK-8231829 Assertion poison page established too early
-
- Resolved
-
- relates to
-
JDK-8227275 Within native OOM error handling, assertions may hang the process
-
- Resolved
-
-
JDK-8191101 Show register content in hs-err file on assert
-
- Resolved
-