8216982: Assertion poison page established too early

Reviewed-by: mdoerr, dholmes